# go-bazel

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
proto/servicea/: .bazelignore  BUILD.bazel  servicea.pb.go  servicea.proto
scripts/: status.sh
services/a/: BUILD.bazel  main.go
services/b/: BUILD.bazel  main.go
services/servicea/: BUILD.bazel  hander.go  handler.go  main.go
services/serviceb/: BUILD.bazel  main.go
shared/: BUILD.bazel  shared.go  shared_test.go  version.go
src/: App.vue  main.ts
