load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jankremlacek/go-bazel
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

# make sure that others can import either using the import or go_default_library naming conventions
# gazelle:go_naming_convention import_alias
