load("@bazel_gazelle//:def.bzl", "gazelle")

load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@npm//:vue-tsc/package_json.bzl", vue_tsc_bin = "bin")

# TODO: add unit tests instead of only testing building
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# gazelle:prefix github.com/jankremlacek/go-bazel
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

# make sure that others can import either using the import or go_default_library naming conventions
# gazelle:go_naming_convention import_alias


# vite

# This macro expands to a link_npm_package for each third-party package in package.json
npm_link_all_packages(name = "node_modules")

SRCS = [
    "index.html",
    "package.json",
    "vite.config.ts",
    "tsconfig.json",
    "//src",
]

BUILD_DEPS = [":node_modules/" + d for d in [
    "@vitejs/plugin-vue",
    "typescript",
    "vite",
    "vite-tsconfig-paths",
    "vue",
    "vue-tsc",
]]

vite_bin.vite(
    name = "build",
    args = ["build"],
    out_dirs = ["dist"],
    srcs = SRCS + BUILD_DEPS,
)

vue_tsc_bin.vue_tsc_test(
    name = "type-check",
    args = ["--noEmit"],
    include_declarations = True,
    data = SRCS + BUILD_DEPS,
    tags = ["manual"],
)

vite_bin.vite_binary(
    name = "vite",
    data = SRCS + BUILD_DEPS,
)

build_test(
    name = "build_test",
    targets = [
        ":build",
        ":type-check",
    ],
)
