load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "servicea_proto",
    srcs = ["servicea.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "servicea_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jankremlacek/go-bazel/proto/servicea",
    proto = ":servicea_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "servicea",
    embed = [":servicea_go_proto"],
    importpath = "github.com/jankremlacek/go-bazel/proto/servicea",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":servicea",
    visibility = ["//visibility:public"],
)
