load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "a_lib",
    srcs = ["main.go"],
    importpath = "github.com/jankremlacek/go-bazel/services/a",
    visibility = ["//visibility:private"],
    deps = [
        "//shared",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "a",
    out = "service-a",
    embed = [":a_lib"],
    visibility = ["//visibility:public"],
)
