load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "serviceb_lib",
    srcs = ["main.go"],
    importpath = "github.com/jankremlacek/go-bazel/services/serviceb",
    visibility = ["//visibility:private"],
    deps = [
        "//shared",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "serviceb",
    embed = [":serviceb_lib"],
    visibility = ["//visibility:public"],
)
