load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "serviceb_lib",
    srcs = ["main.go"],
    importpath = "github.com/jankremlacek/go-bazel/services/serviceb",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/servicea",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "serviceb",
    out = "serviceb",
    embed = [":serviceb_lib"],
    visibility = ["//visibility:public"],
)
